Fixed the scrollbar and added a readme file

--- a/src/components/Modal/_Modal.scss
+++ b/src/components/Modal/_Modal.scss
@@ -40,20 +40,6 @@ body:has(#modal[open]) {
             animation-fill-mode: forwards;
         }
     }
-
-    *::-webkit-scrollbar {
-        width: 5px;
-    }
-
-    *::-webkit-scrollbar-track {
-        box-shadow: inset 0 0 6px $background;
-    }
-
-    *::-webkit-scrollbar-thumb {
-        background-color: $text;
-        outline: none;
-        border-radius: 5px 0 0 5px;
-    }
 }
 
 @keyframes slide-in {
