--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -1,3 +1,17 @@
+*::-webkit-scrollbar {
+    width: 5px;
+}
+
+*::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px $background;
+}
+
+*::-webkit-scrollbar-thumb {
+    background-color: $text;
+    outline: none;
+    border-radius: 5px 0 0 5px;
+}
+
 body {
     background: $background;
     height: 100svh;
